--- a/src/Web/ClientApp/src/index.html
+++ b/src/Web/ClientApp/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="w-full h-full">
   <head>
     <meta charset="utf-8" />
     <title>MonitorGlass.Web</title>
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
-  <body>
+  <body class="h-full">
     <app-root>Loading...</app-root>
   </body>
 </html>
